# re-mind

./: .gitignore  AGENTS.md  README.md  pyproject.toml
_lmt_playground/: pg_250826.py
_playground/: pg_250826.py
_rm_playground/: pg_250826.py
docker/love-me-tender/: docker-compose.yml
docker/re-mind/: .env.example  docker-compose.yml
librarian/: components.py  constants.py  cpaths.py  embedding.py  iter_utils.py  librarian.py  librarian_cli.py  text_processing.py  utils.py  vector_store_service.py
librarian/dao/: base_dao.py  library_file_dao.py
librarian/db/: qdrant.py
llmchat/: chat_prompt_loop.py  chat_session.py  chat_session_utils.py  config_manager.py  cpaths.py  language_models.py  pipelines.py  simple_chat.py  torch_utils.py
llmchat/commands/: __init__.py  chat_command_base.py  command_utils.py  models_command.py  reset_config_command.py
llmchat/components/: model_options.py
love_me_tender/: components.py  constants.py  cpaths.py  lc_prompts.py  llm.py  llm_utils.py  main.py
love_me_tender/db/: vector_store_manager.py
love_me_tender/rag/: embedding.py
re_mind/: components.py  config_manager.py  constants.py  cpaths.py  envvars.py  language_models.py  lc_prompts.py  llm.py  llm_tasks.py  pipelines.py  retrievers.py  text_processing.py
re_mind/cli/: chat_app.py  chat_session.py  chat_session_utils.py  editor_utils.py  re_mind_cli.py  remind_chat.py
re_mind/commands/: configs_command.py
re_mind/db/: librarian.py  vector_store_manager.py  vector_store_service.py
re_mind_playground/: pg_250826.py
todo/: todo.md
(+30 files in other folders)
