[project]
name = "re-mind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.47.0",
    "click>=8.2.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.32",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.6.7",
    "openai>=1.102.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.11.7",
    "pypdf>=6.0.0",
    "qdrant-client>=1.15.1",
    "rich>=14.1.0",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.43",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["re_mind*"]


[project.scripts]
chat-app = "re_mind.cli.chat_app:main"
